@@ -89,7 +89,6 @@ jobs:
           - package: lazy_graph
           - package: tetragono
           - package: tetraku
-          - package: tetraux
           - package: PyScalapack
 
     steps:
@@ -205,11 +204,6 @@ jobs:
         with:
           name: README-of-PyTAT
           path: PyTAT
-      - name: download artifacts for tetraux
-        uses: actions/download-artifact@v3
-        with:
-          name: README-of-tetraux
-          path: tetraux
       - name: build wheel for PyTAT
         env:
           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
@@ -227,23 +221,6 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: cmd /c python -m pip install delvewheel && python -m delvewheel repair --wheel-dir {dest_dir} {wheel} --add-path bin
           CIBW_BUILD_VERBOSITY: 1
         run: python -m cibuildwheel PyTAT --output-dir dist
-      - name: build wheel for tetraux
-        env:
-          CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-          CIBW_ARCHS: all
-          CIBW_MANYLINUX_X86_64_IMAGE: ${{ matrix.manylinux_image }}
-
-          CIBW_BEFORE_ALL_LINUX: yum install -y openblas-devel
-          CIBW_BEFORE_ALL_WINDOWS: cmd /c python .github\scripts\get_openblas_for_windows.py && choco install -y ninja
-          CIBW_BEFORE_ALL_MACOS: ""
-
-          CIBW_ENVIRONMENT_LINUX: MAKEFLAGS=--parallel=${{ matrix.cpu_number }}
-          CIBW_ENVIRONMENT_WINDOWS: MAKEFLAGS=--parallel=${{ matrix.cpu_number }} CMAKEFLAGS="-GNinja|-DCMAKE_CXX_COMPILER=clang++|-DTAT_MATH_LIBRARIES=../../../../lib/libopenblas"
-          CIBW_ENVIRONMENT_MACOS: MAKEFLAGS=--parallel=${{ matrix.cpu_number }} CMAKEFLAGS="-DCMAKE_OSX_ARCHITECTURES=${{ matrix.mac_arch }}"
-
-          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: cmd /c python -m pip install delvewheel && python -m delvewheel repair --wheel-dir {dest_dir} {wheel} --add-path bin
-          CIBW_BUILD_VERBOSITY: 1
-        run: python -m cibuildwheel tetraux --output-dir dist
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
