@@ -11,7 +11,6 @@
 !/tests
 !/tetragono
 !/tetraku
-!/tetraux
 !/tnsp_bridge
 !/vcpkg
 !/.clang-format
