@@ -44,7 +44,6 @@ setup(
     install_requires=[
         f"PyTAT=={version}",
         f"lazy_graph=={version}",
-        f"tetraux=={version}",
         f"PyScalapack=={version}",
         "mpi4py",
         "numpy",
